--- a/styles/common.css
+++ b/styles/common.css
@@ -13,3 +13,8 @@ html{
 .fontf{
 	/*font-family: '微软雅黑';*/
 }
+.headline, .img-place-holder{
+	/*background-color:rgba(0,0,0,0.1);*/
+	z-index: -1000;
+	height: 0;
+}
