--- a/styles/reset.css
+++ b/styles/reset.css
@@ -41,3 +41,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+html{
+	font-size: 20px;
+	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+	/*font-family: "微软雅黑";*/
+}
